Add initial implementation of InvestTax project with AWS Lambda functions
- Created Directory.Build.props to set common project properties.
- Added InvestTax.Core project with a placeholder Class1.
- Implemented InvestTax.Infrastructure project with a reference to InvestTax.Core.
- Developed multiple AWS Lambda projects (Calculator, EmailSender, NBPClient, Normalizer, ReportGenerator, Validator) with basic function handlers.
- Each Lambda project includes necessary AWS configurations and dependencies.
- Added README files for each Lambda project with deployment instructions.
- Created test projects for InvestTax.Core and InvestTax.Lambda with xUnit setup.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,28 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+## AWS
+cdk.out/
+.aws-sam/
+
+## IDEs
+.vs/
+.vscode/
+.idea/
+
+## OS
+.DS_Store
+Thumbs.db
+
+## Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+
+## Test Results
+TestResults/
+coverage/
+
+## LocalStack
+localstack-data/
