feat(infrastructure): implement AWS services for DynamoDB, S3, and SES; add NBP API client

--- a/src/InvestTax.Infrastructure/InvestTax.Infrastructure.csproj
+++ b/src/InvestTax.Infrastructure/InvestTax.Infrastructure.csproj
@@ -4,6 +4,16 @@
     <ProjectReference Include="..\InvestTax.Core\InvestTax.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.*" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.*" />
+    <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.*" />
+    <PackageReference Include="Polly" Version="8.3.*" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.*" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
