feat(validator): implement CSV validation service and models; enhance Lambda function for file processing

--- a/src/InvestTax.Lambda.Validator/InvestTax.Lambda.Validator.csproj
+++ b/src/InvestTax.Lambda.Validator/InvestTax.Lambda.Validator.csproj
@@ -13,6 +13,14 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.8.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.307" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0" />
+    <PackageReference Include="AWS.Logger.Core" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InvestTax.Core\InvestTax.Core.csproj" />
