--- a/tests/InvestTax.Lambda.Tests/InvestTax.Lambda.Tests.csproj
+++ b/tests/InvestTax.Lambda.Tests/InvestTax.Lambda.Tests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
   </ItemGroup>
@@ -21,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\InvestTax.Core\InvestTax.Core.csproj" />
     <ProjectReference Include="..\..\src\InvestTax.Infrastructure\InvestTax.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\InvestTax.Lambda.Validator\InvestTax.Lambda.Validator.csproj" />
   </ItemGroup>
 
 </Project>
