--- a/src/InvestTax.Lambda.NBPClient/InvestTax.Lambda.NBPClient.csproj
+++ b/src/InvestTax.Lambda.NBPClient/InvestTax.Lambda.NBPClient.csproj
@@ -13,6 +13,16 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.8.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
+    <PackageReference Include="Amazon.Lambda.Logging.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.*" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.*" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="10.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.*" />
+    <PackageReference Include="Polly" Version="8.3.*" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.*" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InvestTax.Core\InvestTax.Core.csproj" />
