feat: Implement email sending functionality for tax calculation reports
- Added Function class to handle email sending via AWS SES.
- Introduced EmailInput and EmailOutput models for structured input and output.
- Created EmailContent model to encapsulate email subject and body.
- Developed EmailTemplateService for generating success and error email templates.
- Integrated S3 service to load text reports for successful emails.
- Added error handling for email sending failures and report loading issues.
- Implemented unit tests for email sending functionality and template generation.
- Updated project dependencies to include AWS SDK for S3 and SES, and logging services.
- Adjusted Lambda function memory size and timeout settings in configuration.

--- a/src/InvestTax.Lambda.EmailSender/InvestTax.Lambda.EmailSender.csproj
+++ b/src/InvestTax.Lambda.EmailSender/InvestTax.Lambda.EmailSender.csproj
@@ -13,6 +13,11 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.8.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.400" />
+    <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.400" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InvestTax.Core\InvestTax.Core.csproj" />
