Add unit tests for FIFO tax calculation and report generation
- Implemented comprehensive tests for FifoTaxCalculator, covering various scenarios including simple buy/sell, multiple transactions, and error cases.
- Added tests for TextReportGenerator to ensure correct report formatting and content based on tax summaries.
- Updated project dependencies for Moq and added FluentAssertions for improved test assertions.

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,9 @@ Thumbs.db
 ## Test Results
 TestResults/
 coverage/
+*.cobertura.xml
+coverage.*.xml
+*.coverage
 
 ## LocalStack
 localstack-data/
