--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-﻿name: Deploy to AWS
+name: Deploy to AWS
 
 on:
   workflow_dispatch:
@@ -35,7 +35,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: `${{ env.DOTNET_VERSION }}
+        dotnet-version: ${{ env.DOTNET_VERSION }}
     
     - name: Run tests
       if: inputs.skip_tests == false
@@ -46,12 +46,12 @@ jobs:
     
     - name: Deployment approval
       run: |
-        echo "## Deployment Request :rocket:" >> `$GITHUB_STEP_SUMMARY
-        echo "" >> `$GITHUB_STEP_SUMMARY
-        echo "**Environment**: `${{ inputs.environment }}" >> `$GITHUB_STEP_SUMMARY
-        echo "**Branch**: `${{ github.ref_name }}" >> `$GITHUB_STEP_SUMMARY
-        echo "**Commit**: `${{ github.sha }}" >> `$GITHUB_STEP_SUMMARY
-        echo "**Triggered by**: `${{ github.actor }}" >> `$GITHUB_STEP_SUMMARY
+        echo "## Deployment Request :rocket:" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "**Environment**: ${{ inputs.environment }}" >> $GITHUB_STEP_SUMMARY
+        echo "**Branch**: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+        echo "**Commit**: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+        echo "**Triggered by**: ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
 
   # Deploy infrastructure
   deploy-infrastructure:
@@ -59,7 +59,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: pre-deploy-checks
     environment:
-      name: `${{ inputs.environment }}
+      name: ${{ inputs.environment }}
       url: https://console.aws.amazon.com/cloudformation
     
     steps:
@@ -69,14 +69,14 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: `${{ env.NODE_VERSION }}
+        node-version: ${{ env.NODE_VERSION }}
     
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: `${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: `${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: `${{ env.AWS_REGION }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
     
     - name: Install CDK dependencies
       working-directory: ./infrastructure/cdk
@@ -89,31 +89,31 @@ jobs:
     - name: CDK Bootstrap (if needed)
       working-directory: ./infrastructure/cdk
       run: |
-        npx cdk bootstrap aws://`${{ secrets.AWS_ACCOUNT_ID }}/`${{ env.AWS_REGION }} \
-          -c stage=`${{ inputs.environment }} || true
+        npx cdk bootstrap aws://${{ secrets.AWS_ACCOUNT_ID }}/${{ env.AWS_REGION }} \
+          -c stage=${{ inputs.environment }} || true
     
     - name: CDK Deploy
       working-directory: ./infrastructure/cdk
       run: |
         npx cdk deploy \
-          -c stage=`${{ inputs.environment }} \
+          -c stage=${{ inputs.environment }} \
           --require-approval never \
           --verbose
     
     - name: Get Stack Outputs
       id: stack-outputs
       run: |
-        STACK_NAME="InvestTaxStack-`${{ inputs.environment }}"
-        STATE_MACHINE_ARN=`$(aws cloudformation describe-stacks \
-          --stack-name `$STACK_NAME \
+        STACK_NAME="InvestTaxStack-${{ inputs.environment }}"
+        STATE_MACHINE_ARN=$(aws cloudformation describe-stacks \
+          --stack-name $STACK_NAME \
           --query 'Stacks[0].Outputs[?OutputKey==\`StateMachineArn\`].OutputValue' \
           --output text)
-        echo "state_machine_arn=`$STATE_MACHINE_ARN" >> `$GITHUB_OUTPUT
+        echo "state_machine_arn=$STATE_MACHINE_ARN" >> $GITHUB_OUTPUT
         
-        echo "## Deployment Complete :white_check_mark:" >> `$GITHUB_STEP_SUMMARY
-        echo "" >> `$GITHUB_STEP_SUMMARY
-        echo "**Stack**: `$STACK_NAME" >> `$GITHUB_STEP_SUMMARY
-        echo "**State Machine ARN**: `$STATE_MACHINE_ARN" >> `$GITHUB_STEP_SUMMARY
+        echo "## Deployment Complete :white_check_mark:" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "**Stack**: $STACK_NAME" >> $GITHUB_STEP_SUMMARY
+        echo "**State Machine ARN**: $STATE_MACHINE_ARN" >> $GITHUB_STEP_SUMMARY
 
   # Run smoke tests
   smoke-tests:
@@ -128,14 +128,14 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: `${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: `${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: `${{ env.AWS_REGION }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
     
     - name: Verify S3 buckets
       run: |
         echo "Verifying S3 buckets..."
-        aws s3 ls | grep investtax-`${{ inputs.environment }} || echo "::warning::S3 buckets not found"
+        aws s3 ls | grep investtax-${{ inputs.environment }} || echo "::warning::S3 buckets not found"
     
     - name: Verify DynamoDB tables
       run: |
@@ -149,9 +149,9 @@ jobs:
     
     - name: Test Step Functions
       run: |
-        echo "## Smoke Test Results :test_tube:" >> `$GITHUB_STEP_SUMMARY
-        echo "" >> `$GITHUB_STEP_SUMMARY
-        echo "All infrastructure components verified successfully!" >> `$GITHUB_STEP_SUMMARY
+        echo "## Smoke Test Results :test_tube:" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "All infrastructure components verified successfully!" >> $GITHUB_STEP_SUMMARY
 
   # Deployment summary
   deployment-summary:
@@ -163,21 +163,21 @@ jobs:
     steps:
     - name: Generate summary
       run: |
-        echo "## Deployment Pipeline Summary" >> `$GITHUB_STEP_SUMMARY
-        echo "" >> `$GITHUB_STEP_SUMMARY
-        echo "| Stage | Status |" >> `$GITHUB_STEP_SUMMARY
-        echo "|-------|--------|" >> `$GITHUB_STEP_SUMMARY
-        echo "| Pre-deploy Checks | `${{ needs.pre-deploy-checks.result }} |" >> `$GITHUB_STEP_SUMMARY
-        echo "| Infrastructure | `${{ needs.deploy-infrastructure.result }} |" >> `$GITHUB_STEP_SUMMARY
-        echo "| Smoke Tests | `${{ needs.smoke-tests.result }} |" >> `$GITHUB_STEP_SUMMARY
+        echo "## Deployment Pipeline Summary" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "| Stage | Status |" >> $GITHUB_STEP_SUMMARY
+        echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
+        echo "| Pre-deploy Checks | ${{ needs.pre-deploy-checks.result }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Infrastructure | ${{ needs.deploy-infrastructure.result }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Smoke Tests | ${{ needs.smoke-tests.result }} |" >> $GITHUB_STEP_SUMMARY
         
-        if [ "`${{ needs.pre-deploy-checks.result }}" != "success" ] || \
-           [ "`${{ needs.deploy-infrastructure.result }}" != "success" ] || \
-           [ "`${{ needs.smoke-tests.result }}" != "success" ]; then
-          echo "" >> `$GITHUB_STEP_SUMMARY
+        if [ "${{ needs.pre-deploy-checks.result }}" != "success" ] || \
+           [ "${{ needs.deploy-infrastructure.result }}" != "success" ] || \
+           [ "${{ needs.smoke-tests.result }}" != "success" ]; then
+          echo "" >> $GITHUB_STEP_SUMMARY
           echo "::error::Deployment failed! Please check the logs and consider rollback."
           exit 1
         else
-          echo "" >> `$GITHUB_STEP_SUMMARY
-          echo ":white_check_mark: **Deployment successful!**" >> `$GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo ":white_check_mark: **Deployment successful!**" >> $GITHUB_STEP_SUMMARY
         fi
