test: add comprehensive tests for CDK app and state machine definition

--- a/infrastructure/cdk/package.json
+++ b/infrastructure/cdk/package.json
@@ -9,6 +9,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
     "cdk": "cdk"
   },
   "devDependencies": {
